[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cveintel"
version = "0.1.0"
description = "CLI tool to determine CVE patch status across Amazon Linux releases"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "boto3>=1.28",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
cveintel = "cveintel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.82",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
