[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cveintel"
version = "1.0.0"
description = "CLI tool to determine CVE patch status across Amazon Linux releases"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "boto3>=1.42.84",
    "openai>=2.30",
    "python-dotenv>=1.0",
]

[project.scripts]
cveintel = "cveintel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "hypothesis>=6.151.11",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
